--- a/marco/MEAN_Projects/mean_friends/client/index.html
+++ b/marco/MEAN_Projects/mean_friends/client/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='app'>
 <head>
 	<meta charset="utf-8">
 	<title>MEAN Friends</title>
 	<script src='angular/angular.js' charset='utf-8'></script>
-	<script src='angular-messages/angular-messages.js' charset='utf-8'></script>
+	<script src='angular-route/angular-route.js' charset='utf-8'></script>
+	<script src='assets/app.js'></script>
+	<script src='assets/controllers/mainController.js'></script>
+	<script src='assets/controllers/newController.js'></script>
+	<script src='assets/controllers/editController.js'></script>
+	<script src='assets/controllers/showController.js'></script>
+	<script src='assets/factories/friendsFactory.js'></script>
 </head>
 <body>
 	<h1>Welcome</h1>
+	<div ng-view>
+		
+	</div>
 </body>
 </html>
